# Generate-c-tests-with-python

./: .gitignore  CMakeLists.txt  README.md
cmake/: FetchCMocka.cmake
inc/: dbg.h
math/: CMakeLists.txt  matlib.c  matlib.h
scripts/: Python_C_test_generator.py  file.tt  main.c  tt.py
src/: main.c
test/: test.c
